added login html, renamed home.html, fixed hrefs

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bankingstyle.css">
   </head>
   <body>
-    <h1>Welcome to my new page</h1>
-    <a href="frontEnd.html">Back to main</a>
+    <h1>SIGN UP PAGE HERE</h1>
+    <a href="/home">Back to main</a>
   </body>
 </html>
