Renamed buttons and added all the pages we might need in the future

--- a/Project/src/main/resources/static/templates/transactions.html
+++ b/Project/src/main/resources/static/templates/transactions.html
@@ -4,7 +4,7 @@
     <!-- Transaction content -->
     <nav>
       <ul>
-        <li><a href='#' data-page="dashboard">Dashboard</a></li>
+        <li><a href='#' data-page="accounts">Back to Accounts</a></li>
       </ul>
   </nav>
 </div>
